--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node dist/app.js",
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "predev": "npx prisma migrate dev"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
