--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "start": "node dist/app.js",
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma": "prisma",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,7 @@
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15"
@@ -27,7 +31,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.7",
     "@types/nodemailer": "^6.4.16",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
